@@ -108,11 +108,16 @@ namespace GtkSharp.Generation {
 
 		protected void AppendCustom (StreamWriter sw, string custom_dir)
 		{
+			AppendCustom (sw, custom_dir, Name);
+		}
+
+		protected void AppendCustom (StreamWriter sw, string custom_dir, string type_name)
+		{
 			char sep = Path.DirectorySeparatorChar;
-			string custom = custom_dir + sep + Name + ".custom";
+			string custom = custom_dir + sep + type_name + ".custom";
 			if (File.Exists(custom)) {
 				sw.WriteLine ("#region Customized extensions");
-				sw.WriteLine ("#line 1 \"" + Name + ".custom\"");
+				sw.WriteLine ("#line 1 \"" + type_name + ".custom\"");
 				FileStream custstream = new FileStream(custom, FileMode.Open, FileAccess.Read);
 				StreamReader sr = new StreamReader(custstream);
 				sw.WriteLine (sr.ReadToEnd ());
