@@ -1,3 +1,14 @@
+2009-07-13  Gabriel Burt  <gabriel.burt@gmail.com>
+
+	* generator/GenBase.cs: Add AppendCustom override that you can pass the
+	type name in, used to include .custom for Name + Adapter and Name +
+	Implementor .custom files for interface gen.
+
+	* generator/InterfaceGen.cs: Use the new AppendCustom override for the
+	Name + Adapter.custom file, and add support for including custom file for
+	the Name + Implementor interface; necessary to manually implement an
+	interface method.
+
 2009-07-12  Mike Kestner  <mkestner@novell.com>
 
 	* glib/GType.cs: add ResolveType event and TypeResolutionHandler delegate
